--- a/db_main.properties
+++ b/db_main.properties
@@ -2,4 +2,4 @@
 #Sat Jan 24 08:19:42 IST 2026
 db.password=admin
 db.username=root
-db.url=jdbc\:mysql\://localhost\:3306/bbs_main?createDatabaseIfNotExist\=true
+db.url=jdbc\:mysql\://localhost\:3306/Swayam_main?createDatabaseIfNotExist\=true
